--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="public, max-age=86400">
+    <meta http-equiv="Expires" content="86400">
+    <meta name="description" content="Professional portfolio of Enrico Schintu. Software developer with senior experience in Web development. Projects, skills, and contact information.">
+    <meta name="author" content="Enrico Schintu">
+    <meta name="keywords" content="developer, software engineer, full-stack, freelance, javascript, typescript, vue.js, react.js, node.js, nest.js">
+    <link rel="canonical" href="https://enricoschintu.com">
     <title>Enrico Schintu Website</title>
   </head>
   <body>
